# cgex

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  blocked_nodes_generator.py  entrypoint.sh  test_cgex.sh
extractor_tools/: dir_extractor.lingo  dir_unlocker.dir  dir_unlocker.lingo  location_extract.lingo
extractor_tools/Xtras/: Buddy API Xtra  FileIO PPC Xtra  Font Asset.x32  Font Xtra.x32  Tmstools.x32
extractor_tools/Xtras/Audio Xtra/Mac Carbon/: Audio Xtra.data  Audio Xtra.rsrc
extractor_tools/Xtras/Audio Xtra/Mac Classic/: Audio Xtra.data  Audio Xtra.rsrc
extractor_tools/Xtras/Audio Xtra/Mac Universal/: Audio Xtra.cpio
extractor_tools/Xtras/Audio Xtra/Shockwave/: AudioXtra.carb  AudioXtra.ppc  AudioXtra.w32  AudioXtra.xpku
extractor_tools/Xtras/Audio Xtra/Windows/: AudioXtra.x32
extractor_tools/Xtras/Audio Xtra/help/: creating_projectors.htm  environ_properties.htm  errorcodes.htm  file_extensions.htm  getting_started.htm  howtoorder.htm  index.htm  install_mac11.htm  install_mac85.htm  install_macmx.htm  install_macmx2004.htm  install_win11.htm  install_winmx2004.htm  install_winmx85.htm  installation.htm  licensing.htm  shockwave.htm  sound_list.htm  styles.css  techsupport.htm  xtrafunctions.htm
src/: game_extractor.rs  img.rs  main.rs  network.rs
